# bevy_suika_game

./: Cargo.toml  README.md
assets/: apple.aseprite  bubble.aseprite  cherry.aseprite  cloud.aseprite  dekopon.aseprite  fruit.titan  grapes.aseprite  melon.aseprite  peach.aseprite  pear.aseprite  persimmon.aseprite  pineapple.aseprite  strawberry.aseprite  ui.titan  unimplemented.aseprite  watermelon.aseprite
src/: asset_loading.rs  fruits.rs  game.rs  main.rs  ui.rs
