[package]
name = "bevy_suika_game"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.14.0", features = ["wayland", "dynamic_linking"] }
bevy_titan = "0.7.0"
bevy_trickfilm = "0.7.0"
bevy_asset_loader = "0.21.0"
avian2d = "0.1"
bevy_eventlistener = "0.8"
strum = "0.26"
strum_macros = "0.26"
rand_core = "0.6"
bevy_rand = "0.7"
bevy_prng = { version = "0.7", features = ["wyrand"] }

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
